--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,7 @@ main {
 main img {
   display: flex;
   width: 75px;
+  margin: auto;
 }
  
 .decoration { 
@@ -105,6 +106,10 @@ h2 {
   color: #7f7c6b;
 }
 
+.card img {
+  margin: 0;
+}
+
 h3{
   font-size: 23px;
   font-family: 'Sriracha', cursive;
@@ -119,8 +124,8 @@ h3{
   background-color: #c4f2ad;
 }
 
-.card-green h3{ 
-  margin-right: 25px;
+.card-green p{ 
+  margin: 0 40px 0 0;
 }
 
 .card-light-brown {
@@ -134,6 +139,10 @@ h3{
 a {
   color: black;
   font-weight: 700;
+}
+
+.green-letter h2 {
+  color: #57bb6b;
 }
 
 font-family: 'Quattrocento', serif;
