--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@ body {
   background: #ddd;
   border:solid 2px black;
   font-family: 'Maven Pro', sans-serif;
+  background-color: #ffffff;
 }
 
 img {
@@ -16,6 +17,11 @@ header {
   padding: 30px;
   margin: 0;
   background-size: cover;
+}
+
+header h1 img{
+  width: 206px;
+  margin: auto;
 }
 
 .bg-head {
@@ -34,10 +40,12 @@ header {
   color: #ffffff;
   background: #57bb6b;
   text-decoration: none;
-  padding: 10px 20px;
+  padding: 13px 26px;
   margin: 10px 20px;
   text-decoration: none;
   border-radius: 10px;
+  font-weight: normal;
+  font-size: 20px;
 }
 
 .cta-light {
@@ -49,6 +57,7 @@ header p {
   font-size: 20px;
   text-align: center;
   color: #57bb6b;
+  font-family: 'Quattrocento', serif;
 }
 
 main {
@@ -57,7 +66,7 @@ main {
   color: #ffffff;
 }
 
-main img {
+main img ,footer img {
   display: flex;
   width: 75px;
   margin: auto;
@@ -145,5 +154,20 @@ a {
   color: #57bb6b;
 }
 
+footer{
+  background-color: white;
+  color: #57bb6b;
+  font-size: 12px;
+  font-family: 'Maven Pro', sans-serif;
+  margin: 0;
+  padding-bottom: 40px;
+}
+
+footer p{
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+font-family: 'Maven Pro', sans-serif;
 font-family: 'Quattrocento', serif;
 font-family: 'Sriracha', cursive;
